<resources>
    <string name="app_name">CoWIN OTP Retriever</string>
    <string name="enter_phone_number">Enter Your Phone Number</string>
    <string name="start_listening_cowin_otp">Start Listening CoWIN OTP &#160;</string>
    <string name="kvdb_base_url">https://kvdb.io</string>
    <string name="enter_kvdb_bucket_key">Enter KV DB Bucket Key</string>
    <string name="kvdb_default_key">ASth4wnvVDPkg2bdjsiqMN</string>
    <string name="phone_number_id">0</string>
    <string name="kvdb_bucket_key_id">1</string>
    <string name="status_otp_received">CoWIN SMS Received. Sending..</string>
    <string name="status_listening">Listening for CoWIN OTP SMS</string>
    <string name="status_stopped_listening">Stopped listening for CoWIN SMS</string>
    <string name="otp_send_success">Successfully sent CoWIN OTP. %1$s</string>
    <string name="send_otp_fail_message">Sending OTP failed with reason: %1$s. Retry attempt #%2$d..</string>
    <string name="otp_received_toast">Sending OTP to %1$s from CoWIN: %2$s</string>
    <string name="error_server_not_connected_to_internet">Server is not connected to the internet</string>
    <string name="error_device_not_connected_to_internet">Your device is not connected to the internet</string>
    <string name="error_bad_request">Bad request due to malformed URL</string>
    <string name="error_parse_error">Parse Error (because of invalid json or xml)</string>
    <string name="error_out_of_memory_error">Out of Memory Error</string>
    <string name="error_auth_failed">Authentication failed</string>
    <string name="error_server_unresponsive">KVDB Server is not responding</string>
    <string name="error_timeout">Connection timed out</string>
    <string name="error_unknown_with_status_code">An Unknown Error occurred with HTTP status %1$d</string>
    <string name="error_unknown">An Unknown Error occurred</string>
    <string name="enter_password_used_while_script_run">Enter Unique Password to use Local Wifi</string>
    <string name="or_str">Or,</string>
</resources>